--- a/atogaki.tex
+++ b/atogaki.tex
@@ -2,3 +2,11 @@
 
 \paragraph{NoNameA 774}
 
+ここにはあとがきを書きます。
+
+\paragraph{}
+
+この本を許可無くスキャン等してインターネット等に公開することを禁じます。
+インターネットに公開する際は、\url{https://nna774.net/piet/C91Book.pdf}よりid:pass hoge:fugaでダウンロードしてから公開してください。
+より正確に言うと、Creative Commons BY-SA 4.0に従うか、GNU Free Document License 1.3 or any later versionに従うことで、あなたはこの本を自由に共有、頒布等をすることができます。
+しばらくは私からは認証等無しにこの本を公開する予定はありませんが(購入して頂いた人が特権的に読めるように)、もし十分広くインターネットでこの本が入手できるようになった場合には私のWebページで公開します。
