--- a/C91Book.tex
+++ b/C91Book.tex
@@ -66,7 +66,7 @@
 \section*{奥付}
 \hrule\vskip.5mm\hrule\vskip3mm
 \begin{tabular}{ll}
-  2015/12/31 & 初版発行\\
+  2016/12/29 & 初版発行\\
   hash: & \href{https://github.com/nna774/C89Book2/tree/3e0c955600ecae2e6549ea95b9c9eee7587ef01c}{3e0c955600ecae2e6549ea95b9c9eee7587ef01c}(ココの変更)\\
   著作・発行 & NoNameA 774 (nonamea774@nnn77) \\
   サークル & いっと☆わーくす！ \\
@@ -75,7 +75,8 @@
   Twitter & @nonamea774\\
   GPG Key & 0x0C3E3AB2\\
   fingerprint & 674A 287A 21D2 2431 AD8F \\
-  & D328 AEF3 C3C7 0C3E 3AB2
+  & D328 AEF3 C3C7 0C3E 3AB2\\
+  Keybase.io & \url{https://keybase.io/nona}\\
 \end{tabular}
 \vskip3mm\hrule\vskip3mm
 
