改ページ抑制

--- a/C91Book.tex
+++ b/C91Book.tex
@@ -1,4 +1,4 @@
-\documentclass[12pt,b6book]{book}
+\documentclass[12pt,b6book,openany]{book}
 
 \usepackage{xltxtra}
 \setmainfont[Ligatures=TeX]{IPAPMincho}
