--- a/C91Book.tex
+++ b/C91Book.tex
@@ -46,9 +46,10 @@
 %% 表紙
 %% \pagenumbering{Alph}
 %%\insertpage{images/KOKORO100.pdf}
-%%%%%%%%%%%%%%\includepdf{images/hyoushi.pdf}
+\includepdf{images/のな表紙.pdf}
 %%\includegraphics[width=\paperwidth]{images/KOKORO100.png}
-%% \addtocounter{ptc}{1} % nande-
+%% \includegraphics[width=\paperwidth]{のな表紙.png}
+%% \addtocounter{ptc}{1} % nande
 \tableofcontents
 %% \newpage
 %% 
