奥付いじった

--- a/C91Book.tex
+++ b/C91Book.tex
@@ -74,7 +74,7 @@
   サークル & いっと☆わーくす！ \\
   メールアドレス & \href{mailto:nonamea774@gmail.com}{\nolinkurl{nonamea774@gmail.com}}\\
   Web & \url{https://nna774.net/}\\
-  Twitter & @nonamea774\\
+  Twitter & \href{https://twitter.com/nonamea774}{@nonamea774}\\
   GPG Key & 0x0C3E3AB2\\
   fingerprint & 674A 287A 21D2 2431 AD8F \\
   & D328 AEF3 C3C7 0C3E 3AB2\\
