--- a/piet-editor.tex
+++ b/piet-editor.tex
@@ -19,9 +19,7 @@
 こんな感じの画面が出たりするはずです\footnote{画面は開発中のものです。大きな変更が入る可能性がありますが、何も出ないとか明らかなバグみつけたら教えてください……。
 \url{https://github.com/piet-editor/piet-editor/issues/new} or なんかリプライででも}。
 CSSをまだ全く書いていないので(あとデバッグ用の出力が下のほうに出ていますし)、まだUIがわかりづらいかもしれません。
-\begin{center}
-  \includegraphics{images/editor_g.png}
-\end{center}
+\centerimage{images/editor_g.png}
 Pidet\footnote{\url{https://github.com/dnek/Pidet}}
 を触っていたらなんとなくわかるような雰囲気にしたつもりですが\footnote{Pidet触ったことが無くてもぜんぜん良いんですが、PietそのものについてはPietのエディタを作った話(\url{http://www.slideshare.net/KMC_JP/piet-46068527})の46ページぐらいまでの内容(Pietの言語仕様についての説明です)は前提にさせてもらいたいです……。
 そもそもPietの仕様が前提に無い人がこの本読んで嬉しいんだろうか……とか考え出すと、そもそも誰がこれを読む？？？？？ みたいなきもちになってくるのでよくないですね。}、
