--- a/piet-editor.tex
+++ b/piet-editor.tex
@@ -1,5 +1,15 @@
 \chapter[piet-editorを作ったので宣伝]{piet-editorを作ったので宣伝}
 
+\section{はじめに}
+
+はじめまして、またはお久しぶりです。のな(@nonamea774)です。
+今回C91に当選していたのですが、10月ぐらいから体調を崩していて全然原稿が進まず、
+頒布を諦めようかとも結構悩んだのですが、
+すばらいい表紙と記事を描いて(書いて)もらったので、なんとか出すこととなりました。
+
+
+\section{つくりました}
+
 周りの人がよくPietのエディタを作っているので
 \footnote{Pietのエディタを作った話(\url{http://www.slideshare.net/KMC_JP/piet-46068527}) Pidet \url{https://github.com/dnek/Pidet}}
 \footnote{Muratam/UltraPiet \url{https://github.com/Muratam/UltraPiet}}、
@@ -19,7 +29,7 @@
 こんな感じの画面が出たりするはずです\footnote{画面は開発中のものです。大きな変更が入る可能性がありますが、何も出ないとか明らかなバグみつけたら教えてください……。
 \url{https://github.com/piet-editor/piet-editor/issues/new} or なんかリプライででも}。
 CSSをまだ全く書いていないので(あとデバッグ用の出力が下のほうに出ていますし)、まだUIがわかりづらいかもしれません。
-\centerimage{images/editor_g.png}
+\centerimage{images/editor.png}
 Pidet\footnote{\url{https://github.com/dnek/Pidet}}
 を触っていたらなんとなくわかるような雰囲気にしたつもりですが\footnote{Pidet触ったことが無くてもぜんぜん良いんですが、PietそのものについてはPietのエディタを作った話(\url{http://www.slideshare.net/KMC_JP/piet-46068527})の46ページぐらいまでの内容(Pietの言語仕様についての説明です)は前提にさせてもらいたいです……。
 そもそもPietの仕様が前提に無い人がこの本読んで嬉しいんだろうか……とか考え出すと、そもそも誰がこれを読む？？？？？ みたいなきもちになってくるのでよくないですね。}、
