--- a/C91Book.tex
+++ b/C91Book.tex
@@ -92,7 +92,8 @@
 \end{tabular}
 \vskip3mm\hrule\vskip3mm
 
-コメント
+今回表紙はMokoさん(\href{https://twitter.com/moko_oxygen}{@moko\_oxygen})に描いて頂きました！
+ありがとうございました。
 
 %% \newpage
 %% 　
