--- a/atogaki.tex
+++ b/atogaki.tex
@@ -4,6 +4,10 @@
 
 ここにはあとがきを書きます。
 
+\paragraph{murata}
+
+Pietの基礎知識を前提として書いてしまった感があるのですが頑張って解読してくれたら幸いです
+
 \paragraph{著作権表示}
 
 {\small この本を許可無くスキャン等してインターネット等に公開することを禁じます。
