--- a/piet-editor.tex
+++ b/piet-editor.tex
@@ -6,7 +6,7 @@
 今回C91に当選していたのですが、10月ぐらいから体調を崩していて全然原稿が進まず、
 頒布を諦めようかとも結構悩んだのですが、
 すばらいい表紙と記事を描いて(書いて)もらったので、なんとか出すこととなりました。
-
+すごく薄い本となってしまいましたが……許して貰えると幸いです。
 
 \section{つくりました}
 
@@ -35,6 +35,8 @@ Pidet\footnote{\url{https://github.com/dnek/Pidet}}
 そもそもPietの仕様が前提に無い人がこの本読んで嬉しいんだろうか……とか考え出すと、そもそも誰がこれを読む？？？？？ みたいなきもちになってくるのでよくないですね。}、
 ブラウザだけでPietに入門できてうれしい みたいな気持ちの人が表われるようにと作った点もあるのでよくないですね。
 もうちょっとUIに説明入れないと……。
+
+上の方の3*7のカラーパレットで色を選んで、その下のキャンバスにポチポチとドット(コーデル)を打っていくような感じです。
 
 実装については一応Pietの本を名乗っているので詳しくは省きますが、React+es6で、piet-testutils\footnote{\url{https://github.com/nna774/piet-testutils}}からインタプリタ部分を切り出して、piet-interpreter\footnote{\url{https://github.com/nna774/piet-interpreter}}というnpm moduleにしたりして使い回したりしたので、意外とすぐにできたという感じです。
 
