あとがきを書いた。

--- a/atogaki.tex
+++ b/atogaki.tex
@@ -2,11 +2,15 @@
 
 \paragraph{NoNameA 774}
 
-ここにはあとがきを書きます。
+{夏休み終了ぐらいから体調を崩していてギリギリまで出すか悩みましたが、なんとか形になりました。
+読んでくださってありがとうございます……。
+
+今回murataくんの記事とかは色についての言及が含まれているのに、カラーで刷れなかったので残念です。
+是非PDFで見てみてください。}
 
 \paragraph{murata}
 
-Pietの基礎知識を前提として書いてしまった感があるのですが頑張って解読してくれたら幸いです
+{Pietの基礎知識を前提として書いてしまった感があるのですが頑張って解読してくれたら幸いです。}
 
 \paragraph{著作権表示}
 
