--- a/C91Book.tex
+++ b/C91Book.tex
@@ -100,6 +100,6 @@
 %% \newpage
 %% 　
 %% \newpage
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%\includepdf{images/KOKORO100_kaisetsu.pdf}
+\includepdf{描画.pdf}
 
 \end{document}
