--- a/cgi.tex
+++ b/cgi.tex
@@ -4,6 +4,8 @@ KMCは今年のエイプリルフールでpietでwebサーバを書いて(描い
 4/1には\url{http://april-2016.kmc.gr.jp}\footnote{今はこのURIにアクセスすると、解説ブログへとリダイレクトされます。是非一度ご覧ください。}でpietで書かれたHTTP serverが動いていて、
 それがnginxの下にぶらさがっていたようです\footnote{ようです、というのは、これには私はかかわっていないからです(ここで気付きましたが、この記事はのなの二つ目の記事です。はじめにが無いので判り辛いですね)。}。
 
+今回はどのようなコードが動いていたか、簡単に見て行きたいと思います。
+
 使われていたサーバは以下のようなソースコードとなっていました。……とここにソースコードの画像をほどんど線のように見えるだろうなと予想しながらも貼ろうとしましたが、
 57286 x 153 の大きさを持ち、\TeX の制限？ で貼ることができませんでした。
 \url{https://raw.githubusercontent.com/kmc-jp/2016-aplil-fool/master/htmlserver.png}\footnote{\url{https://github.com/kmc-jp/2016-aplil-fool/}にレポジトリがあり、その中にこのコードも含まれています。}
@@ -12,4 +14,56 @@ KMCは今年のエイプリルフールでpietでwebサーバを書いて(描い
 巨大すぎるので、最初のほうを切り出してきますと、このような感じです。
 \centerimage{images/outx10.png}
 これだけでpietの自動生成に詳しい人は、だいたいどのように書かれたのか予想がつくかもしれません。
+pietの公式ページ？ のサンプル\footnote{\url{http://www.dangermouse.net/esoteric/piet/samples.html}}にあるAssembled Piet Codeや、
 \url{http://www.toothycat.net/wiki/wiki.pl?MoonShadow/Piet}などが生成するpietに似ていますね。
+コードの生成を実際行なってるのはこのコードです。
+\url{https://github.com/kmc-jp/2016-aplil-fool/blob/master/bin2piet.py}
+
+レポジトリには簡単な解説が含まれていますので、挙げておきます。
+\centerimage{images/howItWorks.png}
+「pietは仕様でunicodeしか出力できないのでバイナリを出力するのは難しい」とありますが、
+これはout characteでunicodeで出力するという仕様が定まっている訳ではないので、処理系の問題でしかないように思います。
+
+最初にいくつかの制御部分があって、その後巨大なstringをpushしてそれを出す のような基本方針で描かれているようです。
+このpietの動作説明コードと思わしきrubyで書かれたコードもあります。\url{https://github.com/kmc-jp/2016-aplil-fool/blob/master/main.rb}
+
+最初の制御部分ですが、branch.png\footnote{\url{https://github.com/kmc-jp/2016-aplil-fool/blob/master/branch.png}}がそのまま埋めこまれているようで、
+以下のようなコードとなっています。
+
+\begin{enumerate}
+  \item 標準入力の先頭4文字が`GET 'でなければ400 bad requiestを返す部分に繋がる方向へジャンプ
+  \item 先頭4文字が`GET 'であった時、続く2文字が`/ 'であれば200 OKを返す部分へとジャンプ
+  \item そうではなかった場合、451 Unavailable For Legal Reasonsを返す方向へジャンプ
+\end{enumerate}
+
+httpのリクエストが
+\begin{lstlisting}
+  GET / HTTP/1.1
+  Host: hogehoge
+\end{lstlisting}
+のような形であることを上手く利用して `GET /' だけに応答する最小のコードが書かれているなぁ という感想です。
+あえて文句をつけるなら、GETされてるのが `/' ではなかった時に451を返すことにはおそらくLegal Reasonsは無いであろうので、
+素直に404を返すべき という事ぐらいでしょうか。
+
+続く赤の縞々の部分ですが、light red、red、dark redの三色で望む大きさの長さ下に延ばし、そこを横切ることでpushを繰り返しています。
+ここにbase64 encodedされた200.png\footnote{\url{https://github.com/kmc-jp/2016-aplil-fool/blob/master/200.png}}、
+400.png\footnote{\url{https://github.com/kmc-jp/2016-aplil-fool/blob/master/400.png}}、
+451.png\footnote{\url{https://github.com/kmc-jp/2016-aplil-fool/blob/master/451.png}}などや、
+これらをsrcとするimgタグの含まれたhtml、レスポンスコードなどが含まれています。
+
+\section{さいごに}
+
+と、ざっと軽くどのようにpietの生成が行なわれているか書いてきましたが、いかがでしょうか。
+pietの生成は意外と簡単なので、是非手で描くだけではなく一度挑戦してみてください。
+また、私の作った生成機、piet-automata\footnote{\url{https://github.com/nna774/piet-automata}}もよろしくお願いします。
+これについては、C88で出したペーパー\footnote{\url{https://nna774.net/piet/c88paper.pdf}}、C89で出した本などに解説してたりもするので、
+よろしくお願いします。
+
+またもやpietの基礎を前提とした文章を書いてしまってすみません。
+もし見ていないとしたら、この本の中でも何度も紹介していますが、「Pietのエディタを作った話」
+\url{http://www.slideshare.net/KMC_JP/piet-46068527}
+は一度目を通してくださると嬉しいです。
+
+ここまで読んで頂いてありがとうございました。
+次回があればまたお会いしましょう。
+何かあれば奥付の連絡先にお気軽にご連絡下さい。
