--- a/C91Book.tex
+++ b/C91Book.tex
@@ -58,9 +58,11 @@
 \includepdf{images/のな表紙.pdf}
 %%\includegraphics[width=\paperwidth]{images/KOKORO100.png}
 %% \includegraphics[width=\paperwidth]{のな表紙.png}
-%% \addtocounter{ptc}{1} % nande
+
+\newpage
+
 \tableofcontents
-%% \newpage
+\addtocounter{page}{-1}
 %% 
 %% \newpage
 
