use 、 instead of ，

--- a/piet-editor.tex
+++ b/piet-editor.tex
@@ -18,7 +18,7 @@
 piet-editor(\url{https://piet-editor.github.io/})です。
 スマートフォンでもPietの実行ぐらいはできそうな感じですが、全ての機能を利用するにはPCから実行してください。
 
-piet-editorは，ブラウザで描いたり実行したり共有したりできるようにと作りました。
+piet-editorは、ブラウザで描いたり実行したり共有したりできるようにと作りました。
 描く、実行、ステップ実行、import、exportと一応一通りできます\footnote{undoがまだできないので実装しないと……。}。
 下に画面のスクリーンショットが出ていますが、Shareという所からURIを作ることによって、
 ブラウザで描いたPietをURIにして共有することもできます。
