remove とりあえず

--- a/cgi.tex
+++ b/cgi.tex
@@ -19,7 +19,7 @@ pietの公式ページ？ のサンプル\footnote{\url{http://www.dangermouse.n
 コードの生成を実際行なってるのはこのコードです。
 \url{https://github.com/kmc-jp/2016-aplil-fool/blob/master/bin2piet.py}
 
-レポジトリには簡単な解説が含まれているので、とりあえずその画像を下に引用しておきます。
+レポジトリには簡単な解説が含まれているので、その画像を下に引用しておきます。
 \centerimage{images/howItWorks.png}
 補足しておくと、この解説では「pietは仕様でunicodeしか出力できないのでバイナリを出力するのは難しい」とありますが、
 これはout characterでunicodeで出力するという仕様が定まっている訳ではないので、処理系の問題でしかないように思います。
