--- a/cgi.tex
+++ b/cgi.tex
@@ -53,7 +53,8 @@ httpのリクエストが
 
 \section{さいごに}
 
-と、ざっと軽くどのようにpietの生成が行なわれているか書いてきましたが、いかがでしょうか。
+と、ざっと軽くどのような動作をしているか書いてきましたが、いかがでしょうか。
+このように、このプログラムにおいてもpietの生成が行われています。
 pietの生成は意外と簡単なので、是非手で描くだけではなく一度挑戦してみてください。
 また、私の作った生成機、piet-automata\footnote{\url{https://github.com/nna774/piet-automata}}もよろしくお願いします。
 これについては、C88で出したペーパー\footnote{\url{https://nna774.net/piet/c88paper.pdf}}、C89で出した本などで解説してたりもするので、
