--- a/C91Book.tex
+++ b/C91Book.tex
@@ -83,7 +83,7 @@
 \hrule\vskip.5mm\hrule\vskip3mm
 \begin{tabular}{ll}
   2016/12/29 & 初版発行\\
-  hash: & \href{https://github.com/nna774/C89Book2/tree/3e0c955600ecae2e6549ea95b9c9eee7587ef01c}{3e0c955600ecae2e6549ea95b9c9eee7587ef01c}(ココの変更)\\
+  hash: & \href{https://github.com/nna774/C91book/commit/36fdbd1550f6ccdc7b9233c115dfecdec1cb0c54}{36fdbd1550f6ccdc7b9233c115dfecdec1cb0c54}(の次)\\
   著作・発行 & NoNameA 774 (nonamea774@nnn77) \\
   サークル & いっと☆わーくす！ \\
   メールアドレス & \href{mailto:nonamea774@gmail.com}{\nolinkurl{nonamea774@gmail.com}}\\
